package dto;

public class Car {

    private String licensePlate;
}
