package dto;

public class Model {

    private String name;
    private int pricePerDay;



}
